# fastapi-admin

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  pyproject.toml  reasonix.toml
alembic/: env.py
alembic/versions/: 4194832db1ca_initial_schema.py  5435b0c10dc7_initial_schema_with_uuid_tenant.py
docs/: CONVENTIONS.md
docs/superpowers/plans/: 2026-06-30-fastapi-platform-plan.md
docs/superpowers/specs/: 2026-06-30-fastapi-platform-design.md
src/: discovery.py  main.py
src/base/auth/: deps.py  models.py  router.py  schemas.py  service.py
src/base/crypto/: cipher.py  middleware.py
src/base/events/: bus.py
src/base/tenant/: deps.py  middleware.py  models.py  service.py
src/db/: base.py  session.py
src/demo/: __init__.py  models.py  router.py  schemas.py  service.py
src/rbac/: deps.py  models.py  router.py  schemas.py  service.py
src/system/: config.py  health.py  logging.py
tests/: conftest.py  test_integration.py
tests/base/: test_auth.py
tests/rbac/: test_permissions.py  test_roles.py
